# djpp

./: LICENSE  README.md  pyproject.toml  setup.py
djpaypal_subs/: __init__.py  admin.py  api.py  apps.py  constants.py  enums.py  models.py  settings.py  utils.py  views.py
djpaypal_subs/management/commands/: djpaypalsubs_download_data.py
djpaypal_subs/models/: __init__.py  base.py  billing.py  disputes.py  orders.py  payer.py  payments.py  subscriptions.py  webhooks.py
djpp/: __init__.py  admin.py  api.py  apps.py  constants.py  exceptions.py  fields.py  settings.py  utils.py
djpp/management/commands/: djpaypalsubs_download_data.py  djpp_download_data.py
djpp/migrations/: 0001_initial.py  0002_checkoutorder_payer_model.py
djpp/models/: __init__.py  base.py  billing.py  orders.py  payer.py  payments.py  subscriptions.py  webhooks.py
tests/: test_django_paypal_subscriptions.py
