[tool.poetry]
name = "djpaypal_subs"
version = "0.2.10"
description = ""
authors = ["paramono <alex@paramono.com>"]

packages = [
    { include = "djpaypal_subs" }
]

[tool.poetry.dependencies]
python = "^3.5"
paypalrestsdk = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
