[tool.poetry]
name = "djpp"
version = "0.3.4"
description = ""
authors = ["paramono <alex@paramono.com>"]

packages = [
    { include = "djpp" }
]

[tool.poetry.dependencies]
python = "^3.5"
paypalrestsdk = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
